<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_coordinates"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="16dp"
            android:layout_width="124dp"
            android:layout_height="124dp"
            android:contentDescription="@string/coordinates"/>

        <TextView
            android:gravity="center"
            android:text="@string/potensi"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_potensi_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/potensi_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/tanggal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_tanggal_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/tanggal_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/jam"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_jam_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/jam_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/coordinates"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_coordinates_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/coordinates_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/magnitude"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_magnitude"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/magnitude_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/kedalaman"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_kedalaman_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/kedalaman_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wilayah1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wilayah1_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/wilayah1_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wilayah2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wilayah2_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/wilayah2_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wilayah3"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wilayah3_Value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/wilayah3_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wilayah4"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wilayah4_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/wilayah4_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wilayah5"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wilayah5_value"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/wilayah5_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>